# gobang

./: CMakeLists.txt  README.md  interaction.py  main.cpp  socket.cpp
include/: constant.h  evaluate.h  game_tree.h  node.h  zobrist_hash.h
src/: constant.cpp  evaluate.cpp  game_tree.cpp  node.cpp
